2.2.2/_sources/gallery/shapes_and_collections/ellipse_collection.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_shapes_and_collections_ellipse_collection.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_shapes_and_collections_ellipse_collection.py:


==================
Ellipse Collection
==================





.. image:: /gallery/shapes_and_collections/images/sphx_glr_ellipse_collection_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np
    from matplotlib.collections import EllipseCollection

    x = np.arange(10)
    y = np.arange(15)
    X, Y = np.meshgrid(x, y)

    XY = np.hstack((X.ravel()[:, np.newaxis], Y.ravel()[:, np.newaxis]))

    ww = X / 10.0
    hh = Y / 15.0
    aa = X * 9


    fig, ax = plt.subplots()

    ec = EllipseCollection(ww, hh, aa, units='x', offsets=XY,
                           transOffset=ax.transData)
    ec.set_array((X + Y).ravel())
    ax.add_collection(ec)
    ax.autoscale_view()
    ax.set_xlabel('X')
    ax.set_ylabel('y')
    cbar = plt.colorbar(ec)
    cbar.set_label('X+Y')
    plt.show()


.. _sphx_glr_download_gallery_shapes_and_collections_ellipse_collection.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: ellipse_collection.py <ellipse_collection.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: ellipse_collection.ipynb <ellipse_collection.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
